overflow fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -129,6 +129,9 @@
 }
 
 .squad-builder {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .table-header,
